syntax = "proto3";
package aios.memory;

service MemoryService {
    // Operational Memory (hot, in-memory)
    rpc PushEvent(Event) returns (Empty);
    rpc GetRecentEvents(RecentEventsRequest) returns (EventList);
    rpc UpdateMetric(MetricUpdate) returns (Empty);
    rpc GetMetric(MetricRequest) returns (MetricValue);
    rpc GetSystemSnapshot(Empty) returns (SystemSnapshot);

    // Working Memory (warm, SQLite)
    rpc StoreGoal(GoalRecord) returns (Empty);
    rpc UpdateGoal(GoalUpdate) returns (Empty);
    rpc GetActiveGoals(Empty) returns (GoalList);

    rpc StoreTask(TaskRecord) returns (Empty);
    rpc GetTasksForGoal(GoalIdRequest) returns (TaskList);

    rpc StoreToolCall(ToolCallRecord) returns (Empty);
    rpc StoreDecision(Decision) returns (Empty);

    rpc StorePattern(Pattern) returns (Empty);
    rpc FindPattern(PatternQuery) returns (PatternResult);
    rpc UpdatePatternStats(PatternStatsUpdate) returns (Empty);

    rpc StoreAgentState(AgentState) returns (Empty);
    rpc GetAgentState(AgentStateRequest) returns (AgentState);

    // Long-Term Memory (cold, SQLite + vectors)
    rpc SemanticSearch(SemanticSearchRequest) returns (SearchResults);
    rpc StoreProcedure(Procedure) returns (Empty);
    rpc StoreIncident(Incident) returns (Empty);
    rpc StoreConfigChange(ConfigChange) returns (Empty);

    // Knowledge Base
    rpc SearchKnowledge(SemanticSearchRequest) returns (SearchResults);
    rpc AddKnowledge(KnowledgeEntry) returns (Empty);

    // Context Assembly
    rpc AssembleContext(ContextRequest) returns (ContextResponse);
}

message Empty {}

message Event {
    string id = 1;
    int64 timestamp = 2;
    string category = 3;
    string source = 4;
    bytes data_json = 5;
    bool critical = 6;
}

message RecentEventsRequest {
    int32 count = 1;
    string category = 2;
    string source = 3;
}

message EventList {
    repeated Event events = 1;
}

message MetricUpdate {
    string key = 1;
    double value = 2;
    int64 timestamp = 3;
}

message MetricRequest {
    string key = 1;
}

message MetricValue {
    string key = 1;
    double value = 2;
    int64 timestamp = 3;
}

message SystemSnapshot {
    double cpu_percent = 1;
    double memory_used_mb = 2;
    double memory_total_mb = 3;
    double disk_used_gb = 4;
    double disk_total_gb = 5;
    double gpu_utilization = 6;
    int32 active_tasks = 7;
    int32 active_agents = 8;
    repeated string loaded_models = 9;
}

message GoalRecord {
    string id = 1;
    string description = 2;
    string status = 3;
    int32 priority = 4;
    int64 created_at = 5;
    int64 completed_at = 6;
    string result = 7;
    bytes metadata_json = 8;
}

message GoalUpdate {
    string id = 1;
    string status = 2;
    string result = 3;
}

message GoalIdRequest {
    string goal_id = 1;
}

message GoalList {
    repeated GoalRecord goals = 1;
}

message TaskRecord {
    string id = 1;
    string goal_id = 2;
    string description = 3;
    string agent = 4;
    string status = 5;
    bytes input_json = 6;
    bytes output_json = 7;
    int64 started_at = 8;
    int64 completed_at = 9;
    int64 duration_ms = 10;
    string error = 11;
}

message TaskList {
    repeated TaskRecord tasks = 1;
}

message ToolCallRecord {
    string id = 1;
    string task_id = 2;
    string tool_name = 3;
    string agent = 4;
    bytes input_json = 5;
    bytes output_json = 6;
    bool success = 7;
    int64 duration_ms = 8;
    string reason = 9;
    int64 timestamp = 10;
}

message Decision {
    string id = 1;
    string context = 2;
    bytes options_json = 3;
    string chosen = 4;
    string reasoning = 5;
    string intelligence_level = 6;
    string model_used = 7;
    string outcome = 8;
    int64 timestamp = 9;
}

message Pattern {
    string id = 1;
    string trigger = 2;
    string action = 3;
    double success_rate = 4;
    int32 uses = 5;
    int64 last_used = 6;
    string created_from = 7;
}

message PatternQuery {
    string trigger = 1;
    double min_success_rate = 2;
}

message PatternResult {
    Pattern pattern = 1;
    bool found = 2;
}

message PatternStatsUpdate {
    string id = 1;
    bool success = 2;
}

message AgentState {
    string agent_name = 1;
    bytes state_json = 2;
    int64 updated_at = 3;
}

message AgentStateRequest {
    string agent_name = 1;
}

message SemanticSearchRequest {
    string query = 1;
    repeated string collections = 2;
    int32 n_results = 3;
    double min_relevance = 4;
}

message SearchResult {
    string content = 1;
    bytes metadata_json = 2;
    double relevance = 3;
    string collection = 4;
    string id = 5;
}

message SearchResults {
    repeated SearchResult results = 1;
}

message Procedure {
    string id = 1;
    string name = 2;
    string description = 3;
    bytes steps_json = 4;
    int32 success_count = 5;
    int32 fail_count = 6;
    int64 avg_duration_ms = 7;
    repeated string tags = 8;
    int64 created_at = 9;
    int64 last_used = 10;
}

message Incident {
    string id = 1;
    string description = 2;
    bytes symptoms_json = 3;
    string root_cause = 4;
    string resolution = 5;
    string resolved_by = 6;
    string prevention = 7;
    int64 timestamp = 8;
}

message ConfigChange {
    string id = 1;
    string file_path = 2;
    string content = 3;
    string changed_by = 4;
    string reason = 5;
    int64 timestamp = 6;
}

message KnowledgeEntry {
    string title = 1;
    string content = 2;
    string source = 3;
    repeated string tags = 4;
}

message ContextRequest {
    string task_description = 1;
    int32 max_tokens = 2;
    repeated string memory_tiers = 3;
}

message ContextChunk {
    string source = 1;
    string content = 2;
    double relevance = 3;
    int32 tokens = 4;
}

message ContextResponse {
    repeated ContextChunk chunks = 1;
    int32 total_tokens = 2;
}
